--- a/ContinuesVoiceRecognition-master/ContinuesVoiceRecognition-master/app/src/main/res/layout/activity_second.xml
+++ b/ContinuesVoiceRecognition-master/ContinuesVoiceRecognition-master/app/src/main/res/layout/activity_second.xml
@@ -2,20 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.continuesvoicerecognition.SecondActivity">
-
+    android:layout_height="match_parent">
 
     <View
         android:id="@+id/view2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true" />
+        android:background="@drawable/background_smart_hafaz"/>
+
+    <ImageView
+        android:id="@+id/ImageView2"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp"
+        android:layout_marginTop="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="110dp"
+        android:src="@drawable/logo_smart_hafaz_1"
+        />
 
     <TextView
         android:id="@+id/result_tv1"
@@ -24,39 +27,39 @@
         android:textSize="18dp"
         android:textStyle="italic"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0dp"
         android:textColor="#1a4067"
-        android:text="Sila berikan nombor ayat"
+        android:text="Start From"
+        android:visibility="gone"
         />
 
     <EditText android:id="@+id/txtText1"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter some text to speak"
-        android:layout_below="@+id/result_tv1"
-        android:layout_marginTop="20dp"
-        android:layout_margin="10dp"/>
+        android:hint=""
+        android:layout_below="@+id/ImageView2"
+        android:background="@drawable/start_from"/>
 
     <TextView
         android:id="@+id/result_tv3"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="18dp"
         android:textStyle="italic"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/txtText1"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0dp"
         android:textColor="#1a4067"
-        android:text="Sila nyatakan hingga ayat ke berapa"
+        android:text="To"
+        android:visibility="gone"
         />
 
     <EditText android:id="@+id/txtText3"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter some text to speak"
-        android:layout_below="@+id/result_tv3"
-        android:layout_marginTop="20dp"
-        android:layout_margin="10dp"/>
+        android:hint=""
+        android:layout_below="@+id/txtText1"
+        android:background="@drawable/to"/>
 
     <TextView
         android:id="@+id/view_text1"
@@ -68,7 +71,8 @@
         android:layout_below="@+id/txtText3"
         android:layout_marginTop="10dp"
         android:textColor="#1a4067"
-        android:text="To Display sResult"
+        android:text=""
+        android:visibility="gone"
         />
 
     <TextView
@@ -81,16 +85,49 @@
         android:layout_below="@+id/view_text1"
         android:layout_marginTop="30dp"
         android:textColor="#1a4067"
-        android:text="Berapa kali hendak diulang"
+        android:text="Repeat"
+        android:visibility="gone"
         />
 
     <EditText android:id="@+id/txtText2"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter some text to speak"
-        android:layout_below="@+id/result_tv2"
-        android:layout_marginTop="20dp"
-        android:layout_margin="10dp"/>
+        android:hint=""
+        android:layout_below="@+id/txtText3"
+        android:background="@drawable/repeat"/>
 
+    <Button
+        android:id="@+id/Second_back"
+        android:layout_width="180dp"
+        android:layout_height="50dp"
+        android:text="@string/Back"
+        android:layout_below="@+id/txtText2"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="20dp"
+        android:layout_centerInParent="false"
+        android:textStyle="italic"
+        android:textColor="#1a4067"
+        style="?android:attr/borderlessButtonStyle"
+        android:visibility="gone"
+        />
+
+    <Button
+        android:id="@+id/Play"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_below="@+id/txtText2"
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@drawable/button_speech"
+        />
+    <Button
+        android:id="@+id/second_next"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/Play"
+        android:layout_alignParentRight="true"
+        style="?android:attr/borderlessButtonStyle"
+        android:background="@drawable/button_back"
+        />
 
 </RelativeLayout>
